examples/compile_errors/main.js
const addon = require("./addon.node");

console.log("This is unreachable:", addon);
